--- a/wineBlindTasting2018.html
+++ b/wineBlindTasting2018.html
@@ -68,10 +68,10 @@
             meaning to a blind wine tasting. Innovation for the Blind’s 'The Blind Tasting' wine encourages wine lovers
             to close their eyes and open their minds to experience it as the blind would.”
           </p>
-          <p>They wanted you to test your senses – taste, smell and what you think you know about wine, in support of
+          <p>They want you to test your senses – taste, smell and what you think you know about wine, in support of
             the blind. Their theory is that by removing one of your senses, sight, which is your most active sense, you
             might
-            just experience the world in a different way. This is a unique concept in partnership with Kaleidoscope, KWV
+            just experience the world in a different way. This is an unique concept in partnership with Kaleidoscope, KWV
             and Bravo Design.
           </p>
           <p>All funds generated through this project will be channelled towards the care and support of visually and
@@ -100,13 +100,13 @@
             the eye.
           </p>
           <p>The flavor you get when pouring a glass and letting it rest for a minute or two, is heavy wooded oak. Then
-            there comes through a lovely berry or black fruit aroma. More specifically a hint of cherry. There is a
+            comes through a lovely berry or black fruit aroma. More specifically a hint of cherry. There is a
             layered level with a touch of cinnamon but exceptionally light and complimentary.
           </p>
           <p>A complex but accented palette that is quite cheeky but very enjoyable.
           </p>
-          <p>The structure is a bit on the acidic side but not overwhelming. Alcohol is at 14%. Tannins are at a
-            enjoyable level and the wine is not too bitter but will go well with a nice ribeye steak or a karoo lamb
+          <p>The structure is a bit on the acidic side but not overwhelming. Alcohol is at 14%. Tannins are at an
+            enjoyable level and the wine is not too bitter and should go well with a nice ribeye steak or a karoo lamb
             tjoppie.
           </p>
           <p>The finish of the wine is a lingering content aftertaste that leaves you happy and relaxed.
