--- a/wineBlindTasting2018.html
+++ b/wineBlindTasting2018.html
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <h2>Easy drinking and unique label and concept</h2>
+          <h2>Easy drinking with a unique label and concept</h2>
           <p>I recently found a remarkably interesting bottle at the Mooiberge Padstal. The bottle is called The Blind
             Tasting and has the tagline/slogan “Close your eyes and open your mind”
           </p>
