--- a/wineBlindTasting2018.html
+++ b/wineBlindTasting2018.html
@@ -70,17 +70,15 @@
           </p>
           <p>They want you to test your senses – taste, smell and what you think you know about wine, in support of
             the blind. Their theory is that by removing one of your senses, sight, which is your most active sense, you
-            might
-            just experience the world in a different way. This is an unique concept in partnership with Kaleidoscope, KWV
-            and Bravo Design.
+            might just experience the world in a different way. This is an unique concept in partnership with Kaleidoscope,
+            KWV and Bravo Design.
           </p>
           <p>All funds generated through this project will be channelled towards the care and support of visually and
             additionally impaired adults cared for by Innovation for the Blind. In 2018 alone 2250 bottles were sold and
             the
             funds donated.
             <p>The label is a beautiful black design with gold embossed words and filigree. The result is eye catching,
-              bold,
-              and looks good on display.
+              bold, and looks good on display.
             </p> <img src="img/BlindTasting2018.jpg" alt="Blind Tasting Red Blend 2018" width="240" height="379">
           </p>
           <p><a href="https://bravodesign.co.za/portfolios/the-blind-tasting/" target="_blank">Source</a>
@@ -91,8 +89,7 @@
           </p>
           <p>It really is a stunning label which was designed by <a href="https://bravodesign.co.za/about-us/"
               target="_blank">Bravo Design</a> which is a medium size Design company based in Cape Town, South Africa
-            with
-            over 14 years’ experience in packaging design, quite a few fancy and impressive designs in their portfolio.
+            with over 14 years’ experience in packaging design, quite a few fancy and impressive designs in their portfolio.
           </p>
           <p>But I digress...</p>
           <p>The wine itself is an intensely deep ruby color as expected from a blend of Shiraz and Cabernet and looks
