--- a/wineBlindTasting2018.html
+++ b/wineBlindTasting2018.html
@@ -70,7 +70,8 @@
           </p>
           <p>They want you to test your senses – taste, smell and what you think you know about wine, in support of
             the blind. Their theory is that by removing one of your senses, sight, which is your most active sense, you
-            might just experience the world in a different way. This is an unique concept in partnership with Kaleidoscope,
+            might just experience the world in a different way. This is an unique concept in partnership with
+            Kaleidoscope,
             KWV and Bravo Design.
           </p>
           <p>All funds generated through this project will be channelled towards the care and support of visually and
@@ -89,7 +90,8 @@
           </p>
           <p>It really is a stunning label which was designed by <a href="https://bravodesign.co.za/about-us/"
               target="_blank">Bravo Design</a> which is a medium size Design company based in Cape Town, South Africa
-            with over 14 years’ experience in packaging design, quite a few fancy and impressive designs in their portfolio.
+            with over 14 years’ experience in packaging design, quite a few fancy and impressive designs in their
+            portfolio.
           </p>
           <p>But I digress...</p>
           <p>The wine itself is an intensely deep ruby color as expected from a blend of Shiraz and Cabernet and looks
@@ -108,14 +110,14 @@
           </p>
           <p>The finish of the wine is a lingering content aftertaste that leaves you happy and relaxed.
           </p>
-          <p>I will give this one 3.5 barrels. It a good sharing wine around the braaivleis vuurtjie on an informal
-            evening with friends or new acquaintances.
+          <p>I will give this one 3.5 barrels. It is a good sharing wine around the braaivleis vuurtjie on an informal
+            evening with friends or new acquaintances. People you don't want to waste you favourite wine on but still
+            want to impress maybe a little bit...
           </p>
           <p>I cannot find the wine on sale anywhere on the internet but if you are interested in acquiring a bottle or
             6 you can send an email to <a
               href="mailto:blindtastingred@kaleidoscope.org">blindtastingred@kaleidoscope.org</a> (No commission or
-            payment earned
-            for this referral. Just connecting people with good wine and great vibes)
+            payment earned for this referral. Just connecting people with good wine and great vibes)
           </p>
         </div>
       </div>
