--- a/wineVriesenhofGSM2016.html
+++ b/wineVriesenhofGSM2016.html
@@ -59,10 +59,10 @@
         <div class="col-lg-8 col-md-10 mx-auto">
           <h2>Exceptional blended with a excellent aftertaste</h2>
           <p>This wine I found on my wine rack and unfortunately don’t remember where I acquired it from. It is made by
-            Vriesenhof and is red blend of Grenache, Shiraz and Mourvedre from 2016.
+            Vriesenhof and is a red blend of Grenache, Shiraz and Mourvedre from 2016.
           </p>
-          <p>Vriesenhof Vineyards are located on Paradyskloof Road the lovely foothills of the Stellenbosch Mountains
-            and has been under same management since the cellar master Jan Coetzee bought it in December of 1980. The
+          <p>Vriesenhof Vineyards are located on Paradyskloof Road at the lovely foothills of the Stellenbosch Mountains
+            and has been under the same management since cellar master Jan Coetzee bought it in December of 1980. The
             following year their first wine was produced.
           </p>
           <p>In the <a href="http://vriesenhof.co.za/the-farm/" target="_blank">words</a> of the Vriesenhof family …
@@ -72,12 +72,12 @@
           </blockquote>
           <p>When he arrived on Vriesenhof, it was planted with Cabernet Sauvignon, Cinsault and Pinotage. In 1983, Jan
             started planting Chardonnay, Merlot and Cabernet Franc. Then they kept going for a while, making wines and
-            history and in 2009 when he planted Grenache vineyards. Which is the relevant vineyard we are interested in
+            history and in 2009 he planted Grenache vineyards. Which is the relevant vineyard we are interested in
             for the wine being enjoyed today.
           </p>
           <p>Tally ho pip pip and on to the wine itself we go:
           </p>
-          <p>The bottle is presented with a lovely white label made from a rougher grain of paper with farm name and
+          <p>The bottle is presented with a lovely white label made from a rougher grain of paper with the farm name and
             cultivar and year at the top. Below is a grainy image of the original Winery/Farmhouse.
           </p>
           <p><img src="img/VriesenhofLabel.jpg" alt="Vriesenhof Label image" width="379" height="240">
@@ -86,8 +86,8 @@
           </p>
           <p>The back label of the bottle has a bit more information about the expected flavors and aroma along with a
             recommended serving temperature and aging period. Also located on the back label is an inspiring little
-            line: “The Philosophy at Vriesenhof cellar is to maintain the equilibrium between the soil, season and man’s
-            skills. Serendipity plays a role too.”
+            line: <em>“The Philosophy at Vriesenhof cellar is to maintain the equilibrium between the soil, season and man’s
+            skills. Serendipity plays a role too.”</em>
           </p>
           <p>The wine itself is a medium ruby color. Deep ruby from the Shiraz maybe even but more on the delicate side.
             The tears on the side of the glass forms a bit slower than expect and linger for quite a while afterwards.
@@ -96,18 +96,18 @@
           </p>
           <p>When you pour it initially, there is the overpowering smell of the French oak barrel it was aged in. Then
             as it rests you start diving into the layers and you get an odour of cherries and spices, specifically
-            nutmeg and ‘n hint of freshly ground pepper.
+            nutmeg and a hint of freshly ground pepper.
           </p>
-          <p>The wine is medium bodied fruity wine. It has low acidity levels and tastes not too dry but leaves a
+          <p>The wine is a medium bodied fruity wine. It has low acidity levels and tastes not too dry but leaves a
             pleasant and playful aftertaste. Alcohol levels are at 14% and not that noticeable.
           </p>
           <p>The aftertaste lingers for a bit and transforms from the woody spice berries described earlier to a
-            well-rounded deep tasting red blend of exceptional quality.
+            well-rounded deep tasting red blend of exceptional quality. It went down graciously with the butter aged sirlion steak and greek salad I paired it with.
           </p>
           <p>Overall, I would rate this wine 4 barrels as it is definitely above average in aroma, delivery and
             aftertaste.
           </p>
-          <p>This wine will make a great gift for immediate consumption if you can get the 2016 as it as aged well and
+          <p>This wine will make a great gift for immediate consumption if you can get the 2016 as it has aged well and
             will bring joy to a beginner or an experienced wine lover.
           </p>
           <p>If you want to buy some and experience this Vriesenhof blended joy for yourself, you can do so at their <a
