--- a/wineVriesenhofGSM2016.html
+++ b/wineVriesenhofGSM2016.html
@@ -57,7 +57,7 @@
     <div class="container">
       <div class="row">
         <div class="col-lg-8 col-md-10 mx-auto">
-          <h2>Exceptional blended with a excellent aftertaste</h2>
+          <h2>Exceptional blended with an excellent aftertaste</h2>
           <p>This wine I found on my wine rack and unfortunately don’t remember where I acquired it from. It is made by
             Vriesenhof and is a red blend of Grenache, Shiraz and Mourvedre from 2016.
           </p>
