--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
                 <div class="col-lg-8 col-md-10 mx-auto">
                     <div class="site-heading">
                         <h1>The Great Vibes</h1>
-                        <span class="subheading">a blog about Good Books, Fine Wine and whatever else I fancy</span>
+                        <span class="subheading">a blog about Good Books, Fine Wines and whatever else I fancy</span>
                     </div>
                 </div>
             </div>
