updated the site

--- a/wineTemplate.html
+++ b/wineTemplate.html
@@ -32,7 +32,40 @@
 <body>
 
   <!-- Navigation -->
-  <div id="menu"></div>
+    <nav class="navbar navbar-expand-lg navbar-light fixed-top" id="mainNav">
+        <div class="container">
+            <a class="navbar-brand" href="index.html">GreatVibes</a>
+            <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
+                data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
+                aria-label="Toggle navigation">
+                Menu
+                <i class="fas fa-bars"></i>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarResponsive">
+                <ul class="navbar-nav ml-auto">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="index.html">Home</a>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbardrop" data-toggle="dropdown">
+                            Reviews
+                        </a>
+                        <div class="dropdown-menu">
+                            <a class="dropdown-item" href="books.html">Books</a>
+                            <a class="dropdown-item" href="food.html">Food</a>
+                            <a class="dropdown-item" href="wines.html">Wine</a>
+                        </div>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="about.html">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="contact.html">Contact</a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
 
   <!-- Page Header -->
   <header class="masthead" style="background-image: url('img/Wine1.jpg')">
@@ -45,7 +78,7 @@
             <h2 class="subheading">Use these templates when writing a Wine review</h2>
             <span class="meta">Posted by
               <a href="#">Me</a>
-              on Jan 01, 2021</span>
+              on Jan 01, 2024</span>
           </div>
         </div>
       </div>
@@ -253,7 +286,7 @@
      <div class="container">
        <div class="row">
          <div class="col-lg-8 col-md-10 mx-auto">
-           <p class="copyright text-muted">Copyright &copy; GreatVibes.co.za 2021</p>
+           <p class="copyright text-muted">Copyright &copy; GreatVibes.co.za 2024</p>
          </div>
        </div>
      </div>
@@ -264,7 +297,8 @@
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Custom scripts for this template -->
-  <script src="js/clean-blog.min.js"></script>
+   <script src="js/clean-blog.min.js"></script>
+    <script src="js/clean-blog.js"></script>
 
 </body>
 
