update the text

--- a/10-funny-Scifi-and-Fantasy-Books.html
+++ b/10-funny-Scifi-and-Fantasy-Books.html
@@ -111,32 +111,32 @@
           <p>
             <sub
               >This content contains affiliate links. When you buy through these
-              links, we may earn an affiliate commission.</sub
+              links, I may earn an affiliate commission.</sub
             >
           </p>
           <p>
-            Having grown up on a reading list comprised mostly of Terry
-            Pratchett and Douglas Adams, I think humor writers don’t get enough
-            credit. It takes skill to make people laugh with nothing but the
-            words you put to paper.
+            Growing up with a reading list dominated by Terry Pratchett and
+            Douglas Adams, I’ve come to believe that humor writers don’t always
+            get the recognition they deserve. Crafting laughter with just words
+            is a real art.
           </p>
           <p>
-            Plus, comedies are a great way to explore meaningful and
-            thought-provoking themes. Humor can get people who wouldn’t
-            otherwise let their guard down to think about issues in a new light.
-            Not only can funny SFF novels entertain readers, but they can be
-            life-changing. The Discworld series, from Vimes’ Boots Theory of
-            Economics to its sage advice on living in a chaotic and strange
-            world, is evidence enough of that.
+            Comedy isn’t just about entertainment—it’s a way to delve into deep,
+            thought-provoking topics. Humor can coax people out of their shells
+            and make them see issues from fresh perspectives. Funny science
+            fiction and fantasy novels can do more than amuse; they can leave a
+            lasting impact. Just look at the Discworld series, with its insights
+            ranging from Vimes’ Boots Theory of Economics to its wisdom on
+            navigating a chaotic world.
           </p>
           <p>
-            Whether you’re in the mood for something escapist or witty and
-            profound, you’ll find plenty to enjoy in these 10 funny science
-            fiction and fantasy novels. I’ve included a mix of established
-            authors like Connie Willis and rising stars like Kaliane Bradley to
-            give you a wide range of options for your next read.
+            If you’re looking for something both escapist and insightful, check
+            out these 10 hilarious sci-fi and fantasy novels. I’ve included a
+            blend of established names like Connie Willis and up-and-coming
+            authors like Kaliane Bradley to give you a variety of choices for
+            your next read.
           </p>
-          <p>Now, onto the books!</p>
+          <p>Let’s dive into the books!</p>
 
           <h2 class="section-heading">
             <a href="https://amzn.to/3WQGvwu" target="_blank"
@@ -158,8 +158,7 @@
           </p>
 
           <h2 class="section-heading">
-            <a
-              href="https://amzn.to/4dhX0IX" target="_blank"
+            <a href="https://amzn.to/4dhX0IX" target="_blank"
               >The Afterlife of Mal Caldera</a
             >
             by Nadi Reed Perez
@@ -177,8 +176,7 @@
           </p>
 
           <h2 class="section-heading">
-            <a
-              href="https://amzn.to/46Ir3GW"target="_blank"
+            <a href="https://amzn.to/46Ir3GW" target="_blank"
               >To Say Nothing of the Dog</a
             >
             by Connie Willis
@@ -194,8 +192,7 @@
           </p>
 
           <h2 class="section-heading">
-            <a
-              href="https://amzn.to/3WBEioc" target="_blank"
+            <a href="https://amzn.to/3WBEioc" target="_blank"
               >Someone You Can Build a Nest In</a
             >
             by John Wiswell
@@ -211,10 +208,7 @@
           </p>
 
           <h2 class="section-heading">
-            <a
-              href="https://amzn.to/4fAeOjQ"  target="_blank"
-              >Prophet</a
-            >
+            <a href="https://amzn.to/4fAeOjQ" target="_blank">Prophet</a>
             by Sin Blaché and Helen MacDonald
           </h2>
           <p>
@@ -227,10 +221,7 @@
           </p>
 
           <h2 class="section-heading">
-            <a
-              href="https://amzn.to/3yEQqgl"  target="_blank"
-              >Dreadful</a
-            >
+            <a href="https://amzn.to/3yEQqgl" target="_blank">Dreadful</a>
             by Caitlin Rozakis
           </h2>
           <p>
@@ -245,10 +236,7 @@
           </p>
 
           <h2 class="section-heading">
-            <a
-              href="https://amzn.to/3M1eq0r"  target="_blank"
-              >Nicked</a
-            >
+            <a href="https://amzn.to/3M1eq0r" target="_blank">Nicked</a>
             by M.T. Anderson
           </h2>
           <p>
@@ -265,8 +253,7 @@
           </p>
 
           <h2 class="section-heading">
-            <a
-              href="https://amzn.to/3LZzft4"  target="_blank"
+            <a href="https://amzn.to/3LZzft4" target="_blank"
               >The Murderbot Diaries</a
             >
             by Martha Wells
@@ -280,8 +267,7 @@
           </p>
 
           <h2 class="section-heading">
-            <a
-              href="https://amzn.to/3X1lMqP" target="_blank"
+            <a href="https://amzn.to/3X1lMqP" target="_blank"
               >How to Live Safely in a Science Fictional Universe</a
             >
             by Charles Yu
@@ -295,8 +281,7 @@
           </p>
 
           <h2 class="section-heading">
-            <a
-              href="https://amzn.to/3WXAsat"  target="_blank"
+            <a href="https://amzn.to/3WXAsat" target="_blank"
               >The Dead Take the A Train</a
             >
             by Cassandra Khaw and Richard Kadrey
