--- a/10-funny-Scifi-and-Fantasy-Books.html
+++ b/10-funny-Scifi-and-Fantasy-Books.html
@@ -59,7 +59,7 @@
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
             <li class="nav-item">
-              <a class="nav-link active" href="index.html">Home</a>
+              <a class="nav-link active" href="/">Home</a>
             </li>
             <li class="nav-item dropdown">
               <a
@@ -71,9 +71,24 @@
                 Reviews
               </a>
               <div class="dropdown-menu">
-                <a class="dropdown-item" href="books.html">Books</a>
-                <a class="dropdown-item" href="food.html">Food</a>
-                <a class="dropdown-item" href="wines.html">Wine</a>
+                <a
+                  class="dropdown-item"
+                  href="/#myInput"
+                  id="dropdown-filter-books"
+                  >Books</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="/#myInput"
+                  id="dropdown-filter-food"
+                  >Food</a
+                >
+                <a
+                  class="dropdown-item"
+                  href="/#myInput"
+                  id="dropdown-filter-wine"
+                  >Wine</a
+                >
               </div>
             </li>
             <li class="nav-item">
