--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             <div class="site-heading">
               <h1>The Great Vibes</h1>
               <span class="subheading"
-                >a blog about Good Books, Fine Wines and whatever else I
+                >a blog about Good Books, Fine Wines, and whatever else I
                 fancy</span
               >
             </div>
